--- a/ywPage/WebContent/ywPage/calendar.html
+++ b/ywPage/WebContent/ywPage/calendar.html
@@ -9,7 +9,7 @@
 <script src="../js/mui.min.js"></script>
 <script src="../js/util.js"></script>
 <script src="../js/calendar.js"></script>
-
+<!-- <script src="../js/getHash3.js"></script> -->
 
 
 </head>
