--- a/ywPage/WebContent/ywPage/photo.html
+++ b/ywPage/WebContent/ywPage/photo.html
@@ -29,6 +29,14 @@
     		<div class="progressSpan">照片上传中</div>
     		<div id="progress"><span></span></div>
     	</div>
+    	<div class="popup" id="popup">
+    		<div>  
+    		<p>确定删除该照片吗？</p>
+    		<button id="ok">确定</button>
+    		<button style="background-color: #398bf1;" id="cancel">取消</button>
+    		</div>
+    		
+    	</div>
 		
 </body>
 </html>
